--- a/blog_html/131227-Premature_optmization_is_evil!.html
+++ b/blog_html/131227-Premature_optmization_is_evil!.html
@@ -1,3 +1,370 @@
+<!DOCTYPE HTML>
+
+<html>
+<head>
+<meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+<title>chris choi | Premature optmization is evil!</title>
+<!-- CSS -->
+<style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            width: 700px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 50px;
+            text-align: justify;
+            font-family: Verdana, Arial;
+        }
+
+        nav ul {
+            display: block;
+            padding-bottom: 30px;
+            border-bottom: 1px dotted #555;
+        }
+
+        nav li {
+            float: left;
+            margin-right: 65px;
+            font-size: 16px;
+            font-weight: bold;
+        }
+
+        nav li#logo {
+            float: left;
+            margin-right: 60px;
+        }
+
+        nav li.link {
+            display: block;
+            float: right;
+
+            margin-left: 35px;
+            margin-right: 0;
+            margin-top: 2px;
+
+            font-size: 14px;
+        }
+
+        nav li#logo a:link, nav li#logo a:visited {
+            color: #333;
+            text-decoration: none;
+        }
+
+        nav li#logo a:hover {
+            color: #777;
+        }
+
+        ul {
+            list-style-type: none;
+            font-size: 12px;
+        }
+
+        ul#projects {
+            text-align: left;
+            margin-top: 20px;
+        }
+
+        ul#projects li {
+            margin-left: 20px;
+            margin-bottom: 20px;
+            font-size: 14px;
+            font-weight: normal;
+        }
+
+        ul#listings {
+            text-align: left;
+            font-size: 12px;
+            margin-bottom: 40px;
+        }
+
+        ul#listings a {
+            font-size: 12px;
+        }
+
+        ul#listings li.year {
+            font-weight: bold;
+        }
+
+        ul#listings li.listing {
+            width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 10px;
+            margin-bottom: 20px;
+        }
+
+        ul.list {
+            list-style-type: disc;
+            margin-top: 0;
+            margin-bottom: 0;
+            font-weight: normal;
+        }
+
+        ul.list li {
+            margin-left: 30px;
+        }
+
+        li.page {
+            display: block;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+
+        span.date {
+            display: inline-block;
+            width: 100px;
+            margin-top: 2px;
+            margin-right: 10px;
+            font-family: Verdana, Monospace;
+            color: #777;
+        }
+
+        span.title {
+            width: 70%;
+        }
+
+        span.title a {
+            font-size: 13px;
+        }
+
+        b.author {
+            color: #C80000;
+        }
+
+        p {
+            margin-top: 25px;
+            margin-bottom: 25px;
+            font-size: 12px;
+            color: #222;
+        }
+
+        p.center_contact {
+            text-align: center;
+        }
+
+        h1, h2, h3 {
+            margin-top: 20px;
+            margin-bottom: 10px;
+            color: #222;
+        }
+
+        h1 {
+            font-size: 20px;
+        }
+
+        h2 {
+            font-size: 18px;
+        }
+
+        h3 {
+            font-size: 16px;
+        }
+
+        pre {
+            width: 95%;
+
+            margin-left: auto;
+            margin-right: auto;
+
+            padding-top: 10px;
+            padding-bottom: 10px;
+
+            font-size: 10px;
+        }
+
+        blockquote {
+            width: 80%;
+            margin-left: auto;
+            margin-right: auto;
+            font-style: italic;
+        }
+
+        a:link, a:visited {
+            color: #0e73d6;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        .small {
+            font-size: 10px;
+        }
+
+        .quote {
+            width: 70%;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            font-size: 12px;
+            font-style: italic;
+        }
+
+        section {
+            clear: both;
+            margin-top: 50px;
+            margin-left: 15px;
+            margin-top: 30px;
+        }
+
+        section.container {
+            display: block;
+        }
+
+        section#home {
+            width: 100%;
+            margin-left: 0;
+            padding-left: 10px;
+        }
+
+        section.page {
+            font-size: 1em;
+            width: 570px;
+
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 30px;
+        }
+
+        section.page ul {
+            list-style-type: disc;
+            margin-left: 20px;
+        }
+
+        section.page iframe {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        section#about {
+            width: 570px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 30px;
+        }
+
+        section#projects{
+            width: 570px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 30px;
+        }
+
+        img {
+            display: block;
+            max-width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            padding: 2px;
+        }
+
+        footer {
+            clear: both;
+            font-size: 10px;
+            text-align: center;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            padding-top: 10px;
+            border-top: 1px dotted #555;
+        }
+    </style>
+<!-- MATHJAX -->
+<script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+            TeX: { equationNumbers: { autoNumber: "AMS" }}
+        });
+    </script>
+<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+</script>
+<!-- JQUERY -->
+<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+<script charset="utf-8" type="text/javascript">
+
+        function goToTop() {
+            $("html, body").animate({
+                scrollTop: 0
+            }, 1);
+        }
+
+        function hash_changed() {
+            show_section(window.location.hash);
+        }
+
+        function show_section(show_section) {
+            found_section = false;
+            $('body').hide().fadeIn();
+
+            for (var i = 0; i < sections.length; i++) {
+                section = sections[i];
+
+                if (section === show_section) {
+                    $(section).fadeIn();
+                    found_section = true;
+                } else {
+                    $(section).hide();
+                }
+            }
+
+            // default to #home
+            if (found_section === false) {
+                $("section#home").fadeIn();
+            }
+        }
+
+        $(document).ready(function() {
+            window.onhashchange = hash_changed;
+
+            sections = new Array();
+            sections[0] = "#home";
+            sections[1] = "#projects";
+            sections[2] = "#about";
+
+            show_section(window.location.hash);
+
+            // register nav links
+            $(".nav_link").click(function(evnt) {
+                console.log(evnt);
+                pathname = evnt.target.pathname;
+                href = evnt.target.href.replace(pathname, "/");
+                console.log(href);
+
+                goToTop();
+
+                window.location = href;
+                return false;
+            });
+        });
+    </script>
+<!-- HIGHLIGHT JS -->
+<link href="http://jmblog.github.com/color-themes-for-highlightjs/css/themes/tomorrow.css" rel="stylesheet">
+<script src="http://yandex.st/highlightjs/7.5/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+</link></head>
+<body>
+<nav>
+<ul>
+<li id="logo">
+<a class="nav_link" href="#home">chris choi</a>
+</li>
+<li class="link">
+<a class="nav_link" href="#about">about</a>
+</li>
+<li class="link">
+<a class="nav_link" href="#projects">projects</a>
+</li>
+<li class="link">
+<a class="nav_link" href="#home">blog</a>
+</li>
+</ul>
+</nav>
+<section class="page">
 <h1>Premature Optimization is EVIL!</h1>
 <p><img alt="Premature Optimization" src="images/premature_optimization.png"/></p>
 <p>The famous saying, a golden rule of programming is that premature optimization
@@ -80,16 +447,25 @@ print "Clever method took: {0} secs".format(round(exe_time, 2))
 <section class="comments">
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'chutsu'; // required: replace example with your forum shortname
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'chutsu'; // required: replace example with your forum shortname
 
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-    </script>
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+        </script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a class="dsq-brlink" href="http://disqus.com">comments powered by <span class="logo-disqus">Disqus</span></a>
 </section>
+</section>
+<footer>
+        Designed By Chris Choi
+    </footer>
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(100689323); }catch(e){}</script>
+<noscript><p><img alt="Clicky" height="1" src="//in.getclicky.com/100689323ns.gif" width="1"/></p></noscript>
+</body>
+</html>
