Replace Clicky web analytics with Google Analytics

--- a/presentations/phd_idea_2-2014/index.html
+++ b/presentations/phd_idea_2-2014/index.html
@@ -190,21 +190,10 @@
 
 	<section class="slide">
         <div>
-            <h2>Evolutionary Algorithms</h2>
-            <ul>
-                <li>Genetic Algorithms</li>
-                <li>Genetic Programming</li>
-                <li>Evolutionary Strategy</li>
-            </ul>
-        </div>
-    </section><!-- end of slide -->
-
-	<section class="slide">
-        <div>
-            <h2>Evolutionary Algorithms - Components</h2>
+            <h2>Genetic Programming - Components</h2>
             <ul>
                 <li>Evaulation Function</li>
-                <li>Problem Representation (e.g. 1D bit string, Tree, Matrix)</li>
+                <li>Problem Representation (e.g. Tree)</li>
                 <li>Training Data (problem dependent)</li>
             </ul>
         </div>
@@ -212,7 +201,7 @@
 
 	<section class="slide">
         <div>
-            <h2>Evolutionary Algorithms - General Structure</h2>
+            <h2>Genetic Programming - General Structure</h2>
             <img src="imgs/genetic_algorithm_process.png">
         </div>
     </section><!-- end of slide -->
