--- a/blog_html/130216-My_First_Conference_in_1_months_time_-_ISGC_in_Taipei!.html
+++ b/blog_html/130216-My_First_Conference_in_1_months_time_-_ISGC_in_Taipei!.html
@@ -346,6 +346,16 @@
 <link href="http://jmblog.github.com/color-themes-for-highlightjs/css/themes/tomorrow.css" rel="stylesheet">
 <script src="http://yandex.st/highlightjs/7.5/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
+<!-- GOOGLE ANALYTICS -->
+<script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-36313536-1', 'chutsu.github.io');
+        ga('send', 'pageview');
+    </script>
 </link></head>
 <body>
 <nav>
@@ -397,8 +407,5 @@ No-SQL solution we thought was best for our use cases.</p>
 <footer>
         Designed By Chris Choi
     </footer>
-<script src="//static.getclicky.com/js" type="text/javascript"></script>
-<script type="text/javascript">try{ clicky.init(100689323); }catch(e){}</script>
-<noscript><p><img alt="Clicky" height="1" src="//in.getclicky.com/100689323ns.gif" width="1"/></p></noscript>
 </body>
 </html>
