--- a/blog_html/121228-Godelization.html
+++ b/blog_html/121228-Godelization.html
@@ -389,7 +389,7 @@ etc...
 the crazy thing is that it is <strong>possible</strong> to convert the above into a single
 natural number.</p>
 <p><strong>Godelization</strong> is a method for mapping many natural numbers into a single
-natural number, devised by Kurt Gdel. We will skip how the mapping is
+natural number, devised by Kurt Godel. We will skip how the mapping is
 performed because it is not within our scope, but what is interesting is the
 fact <em>it can be done</em> is extremely important. While we can use a one to one
 mapping to distinguish two separate events, a more interesting question is:
@@ -403,9 +403,9 @@ product of the $n$ prime numbers is equal to $x$.</p>
     =
     p_{1}^{x_1} p_{2}^{x_2} p_{3}^{x_3} \dots p_{n}^{x_n}
 $$</p>
-<p>Granted the number will tend to be huge in size but who cares? Given a Gdel
+<p>Granted the number will tend to be huge in size but who cares? Given a Godel
 number, we can reconstruct the original string by taking the prime
-factorization of the Gdel number. It is also worthy to mention Gdelization
+factorization of the Godel number. It is also worthy to mention Godelization
 adds another simplification to studying the nature of computation. Instead of
 worrying about programs with multliple input and output sequences we can now
 ignore most of the details and just concentrate on the functions that take a
