--- a/blog_html/121205-what_is_MapReduce_or_How_does_MapReduce_work?.html
+++ b/blog_html/121205-what_is_MapReduce_or_How_does_MapReduce_work?.html
@@ -1,9 +1,8 @@
 <!DOCTYPE HTML>
-
 <html>
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
-<title>chris choi | what is MapReduce or How does MapReduce work?</title>
+<title>chris choi | What is MapReduce or How does MapReduce work?</title>
 <!-- CSS -->
 <style>
         * {
@@ -343,7 +342,7 @@
         });
     </script>
 <!-- HIGHLIGHT JS -->
-<link href="http://jmblog.github.com/color-themes-for-highlightjs/css/themes/tomorrow.css" rel="stylesheet">
+<link href="http://jmblog.github.com/color-themes-for-highlightjs/css/themes/tomorrow.css" rel="stylesheet"/>
 <script src="http://yandex.st/highlightjs/7.5/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <!-- GOOGLE ANALYTICS -->
@@ -356,7 +355,7 @@
         ga('create', 'UA-36313536-1', 'chutsu.github.io');
         ga('send', 'pageview');
     </script>
-</link></head>
+</head>
 <body>
 <nav>
 <ul>
