--- a/blog_html/130219-Paper_explaining_the_optical_illusion_of_speeding.html
+++ b/blog_html/130219-Paper_explaining_the_optical_illusion_of_speeding.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-
 <html>
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
@@ -343,7 +342,7 @@
         });
     </script>
 <!-- HIGHLIGHT JS -->
-<link href="http://jmblog.github.com/color-themes-for-highlightjs/css/themes/tomorrow.css" rel="stylesheet">
+<link href="http://jmblog.github.com/color-themes-for-highlightjs/css/themes/tomorrow.css" rel="stylesheet"/>
 <script src="http://yandex.st/highlightjs/7.5/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <!-- GOOGLE ANALYTICS -->
@@ -356,7 +355,7 @@
         ga('create', 'UA-36313536-1', 'chutsu.github.io');
         ga('send', 'pageview');
     </script>
-</link></head>
+</head>
 <body>
 <nav>
 <ul>
